--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,10 @@
-version = "3.3.1"
+version = "3.4.0"
 style = default
 
-maxColumn = 100
+runner.dialect = scala213source3
 
-runner.dialect = scala213
+maxColumn = 100
+project.git = true
 
 // Vertical alignment is pretty, but leads to bigger diffs
 align.preset = most
