Make the configuration work on scala3

--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -9,13 +9,15 @@ site = GS
 # Authentication related settings
 authentication {
     # Indicates how long a session is valid in hrs
-    sessionLifeHrs = 3 hours
+    session-life-hrs = 3 hours
     # Name of the cookie to store the session
-    cookieName = "EngageToken"
+    cookie-name = "EngageToken"
     # Secret key for JWT tokens
-    secretKey = "Ofm@uYN5zcRL0qwNlMR75%m70HLG@Rz9INv1Bhv"
+    secret-key = "Ofm@uYN5zcRL0qwNlMR75%m70HLG@Rz9INv1Bhv"
     # List of LDAP servers, the list is used in a failover fashion
-    ldapURLs = ["ldap://sbfdc-wv1.gemini.edu:3268"]
+    ldap-urls = ["ldap://sbfdc-wv1.gemini.edu:3268"]
+
+    use-ssl = false
 }
 
 smart-gcal {
@@ -32,9 +34,9 @@ web-server {
     # Port to serve https requests
     port = 7070
     # Port for redirects to https
-    insecurePort = 7071
+    insecure-port = 7071
     # External url used for redirects
-    externalBaseUrl = "localhost"
+    external-base-url = "localhost"
 }
 
 # Configuration of the engage engine
@@ -45,7 +47,7 @@ engage-engine {
     #   full: connect and command the system
     #   readOnly: connect, but only to read values
     #   simulated: don't connect, simulate internally
-    systemControl {
+    system-control {
         altair = simulated
         gems = simulated
         gcal = simulated
@@ -53,11 +55,11 @@ engage-engine {
         gsaoi = simulated
         tcs = simulated
     }
-    odbNotifications = true
-    odbQueuePollingInterval = 3 seconds
+    odb-notifications = true
+    odb-queue-polling-interval = 3 seconds
     tops = "tcs=tcs:, ao=ao:, gm=gm:, gc=gc:, gw=ws:, m2=m2:, oiwfs=oiwfs:, ag=ag:, f2=f2:, gsaoi=gsaoi:, aom=aom:, myst=myst:, rtc=rtc:"
-    epicsCaAddrList = "127.0.0.1"
-    readRetries = 1
-    ioTimeout = 5 seconds
-    dhsTimeout = 20 seconds
+    epics-ca-addr-list = "127.0.0.1"
+    read-retries = 1
+    io-timeout = 5 seconds
+    dhs-timeout = 20 seconds
 }
