adjustments for package deployment

--- a/app/navigate-server/src/main/resources/conf/app.conf
+++ b/app/navigate-server/src/main/resources/conf/app.conf
@@ -2,8 +2,7 @@
 # Navigate server configuration for deployment
 #
 
-# mode can be dev in which case fake authentication is supported and the UI provides some extra tools
-# mode = dev
+mode = production
 site = GN
 
 # Authentication related settings
