Add proxy functionality. Re-enable local conf.

--- a/app/navigate-server/src/main/resources/conf/app.conf
+++ b/app/navigate-server/src/main/resources/conf/app.conf
@@ -37,6 +37,8 @@ web-server {
     insecure-port = 7071
     # External url used for redirects
     external-base-url = "navigate.hi.gemini.edu"
+    # Uri to forward requests made to /proxy to.
+    proxy-base-uri = "https://localhost:8080"
 }
 
 # Configuration of the navigate engine
