--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -37,6 +37,8 @@ web-server {
     insecure-port = 7071
     # External url used for redirects
     external-base-url = "localhost"
+    # Uri to forward requests made to /proxy to.
+    proxy-base-uri = "https://localhost:8080"
 }
 
 # Configuration of the navigate engine
