Send guide configuration to observe

--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -6,35 +6,14 @@
 mode = dev
 site = GS
 
-# Authentication related settings
-authentication {
-    # Indicates how long a session is valid in hrs
-    session-life-hrs = 3 hours
-    # Name of the cookie to store the session
-    cookie-name = "NavigateToken"
-    # Secret key for JWT tokens
-    secret-key = "Ofm@uYN5zcRL0qwNlMR75%m70HLG@Rz9INv1Bhv"
-    # List of LDAP servers, the list is used in a failover fashion
-    ldap-urls = ["ldap://sbfdc-wv1.gemini.edu:3268"]
-
-    use-ssl = false
-}
-
-smart-gcal {
-    # We normally always use GS for smartGCalDir
-    smartGCalHost = "gsodbtest.gemini.edu"
-    # Tmp file for development
-    smartGCalDir = /tmp/smartgcal
-}
-
 # Web server related configuration
 web-server {
     # Interface to listen on, 0.0.0.0 listens in all interfaces, production instances should be more restrictive
     host = "0.0.0.0"
     # Port to serve https requests
-    port = 7070
+    port = 9070
     # Port for redirects to https
-    insecure-port = 7071
+    insecure-port = 9071
     # External url used for redirects
     external-base-url = "localhost"
     # Uri to forward requests made to /proxy to.
@@ -45,6 +24,8 @@ web-server {
 navigate-engine {
     # host for the odb
     odb = "wss://lucuma-odb-development.herokuapp.com/ws"
+    # host for observe
+    observe = "https://localhost:7070"
     # Tells Navigate how to interact with a system:
     #   full: connect and command the system
     #   readOnly: connect, but only to read values
@@ -56,6 +37,7 @@ navigate-engine {
         gpi = simulated
         gsaoi = simulated
         tcs = simulated
+        observe = simulated
     }
     odb-notifications = true
     odb-queue-polling-interval = 3 seconds
