--- a/deploy/navigate-server/src/main/resources/conf/app.conf
+++ b/deploy/navigate-server/src/main/resources/conf/app.conf
@@ -5,28 +5,6 @@
 mode = production
 site = GN
 
-# Authentication related settings
-authentication {
-    # Indicates how long a session is valid in hrs
-    session-life-hrs = 3 hours
-    # Name of the cookie to store the session
-    cookie-name = "NavigateToken"
-    # Secret key for JWT tokens
-    secret-key = "DummyToken"
-    secret-key = ${?NAVIGATE_JWT_KEY}
-    # List of LDAP servers, the list is used in a failover fashion
-    ldap-urls = ["ldap://sbfdc-wv1.gemini.edu:3268"]
-
-    use-ssl = false
-}
-
-smart-gcal {
-    # We normally always use GS for smartGCalDir
-    smartGCalHost = "gsodbtest.gemini.edu"
-    # Tmp file for development
-    smartGCalDir = /tmp/smartgcal
-}
-
 # Web server related configuration
 web-server {
     # Interface to listen on, 0.0.0.0 listens in all interfaces, production instances should be more restrictive
@@ -45,6 +23,8 @@ web-server {
 navigate-engine {
     # host for the odb
     odb = "wss://lucuma-postgres-odb-production.herokuapp.com/ws"
+    # host for observe
+    observe = "https://observe.hi.gemini.edu"
     # Tells Navigate how to interact with a system:
     #   full: connect and command the system
     #   readOnly: connect, but only to read values
@@ -56,6 +36,7 @@ navigate-engine {
         gpi = simulated
         gsaoi = simulated
         tcs = simulated
+        observe = simulated
     }
     odb-notifications = true
     odb-queue-polling-interval = 3 seconds
