Implemented reading guide quality values from real systems.

--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -36,12 +36,12 @@ navigate-engine {
         gcal = simulated
         gpi = simulated
         gsaoi = simulated
-        tcs = simulated
+        tcs = full
         observe = simulated
     }
     odb-notifications = true
     odb-queue-polling-interval = 3 seconds
-    tops = "tcs=tcs:, ao=ao:, gm=gm:, gc=gc:, gw=ws:, m2=m2:, oiwfs=oiwfs:, ag=ag:, f2=f2:, gsaoi=gsaoi:, aom=aom:, myst=myst:, rtc=rtc:"
+    tops = "tcs=tc1:, ao=ao:, gm=gm:, gc=gc:, gw=ws:, m2=m2:, oiwfs=oiwfs:, ag=ag:, f2=f2:, gsaoi=gsaoi:, aom=aom:, myst=myst:, rtc=rtc:"
     epics-ca-addr-list = "127.0.0.1"
     read-retries = 1
     io-timeout = 5 seconds
