--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -36,7 +36,7 @@ navigate-engine {
         gcal = simulated
         gpi = simulated
         gsaoi = simulated
-        tcs = full
+        tcs = simulated
         observe = simulated
     }
     odb-notifications = true
