--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
     timeout-minutes: 60
     steps:
       - name: Install sbt
-        uses: sbt/setup-sbt@v1
+        if: contains(runner.os, 'macos')
+        run: brew install sbt
 
       - name: Checkout current branch (full)
         uses: actions/checkout@v4
@@ -50,12 +51,12 @@ jobs:
           java-version: 17
           cache: sbt
 
+      - name: Install sbt - TEMPORARY!
+        uses: sbt/setup-sbt@v1
+
       - name: sbt update
         if: matrix.java == 'temurin@17' && steps.setup-java-temurin-17.outputs.cache-hit == 'false'
         run: sbt +update
-
-      - name: Check that workflows are up to date
-        run: sbt githubWorkflowCheck
 
       - name: Check headers and formatting
         if: matrix.java == 'temurin@17' && matrix.os == 'ubuntu-latest'
@@ -95,6 +96,9 @@ jobs:
           distribution: temurin
           java-version: 17
           cache: sbt
+
+      - name: Install sbt - TEMPORARY!
+        uses: sbt/setup-sbt@v1
 
       - name: sbt update
         if: matrix.java == 'temurin@17' && steps.setup-java-temurin-17.outputs.cache-hit == 'false'
