Add connection to the odb

--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -19,6 +19,16 @@ web-server {
     # Uri to forward requests made to /proxy to.
     proxy-base-uri = "https://localhost:8080"
 }
+#
+# Single sign-on configuration
+lucuma-sso {
+  service-token = "DummyToken"
+  service-token = ${?ODB_SERVICE_JWT}
+  sso-url = "https://lucuma-sso-dev.lucuma.xyz"
+  sso-url = ${?ODB_SSO_URL}
+  public-key = "DummyKey"
+  public-key = ${?ODB_SSO_PUBLIC_KEY}
+}
 
 # Configuration of the navigate engine
 navigate-engine {
