Add an obsId parameter for slew, and add a slew event if passed

--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -33,7 +33,7 @@ lucuma-sso {
 # Configuration of the navigate engine
 navigate-engine {
     # host for the odb
-    odb = "wss://lucuma-odb-development.herokuapp.com/ws"
+    odb = "https://lucuma-postgres-odb-dev.herokuapp.com/odb"
     # host for observe
     observe = "https://localhost:7070"
     # Tells Navigate how to interact with a system:
