Conf for deployment

--- a/deploy/src/main/resources/conf/app.conf
+++ b/deploy/src/main/resources/conf/app.conf
@@ -19,6 +19,16 @@ web-server {
     proxy-base-uri = "https://localhost:8080"
 }
 
+# Single sign-on configuration
+lucuma-sso {
+  service-token = "DummyToken"
+  service-token = ${?ODB_SERVICE_JWT}
+  sso-url = "https://sso.gpp.lucuma.xyz"
+  sso-url = ${?ODB_SSO_URL}
+  public-key = "DummyKey"
+  public-key = ${?ODB_SSO_PUBLIC_KEY}
+}
+
 # Configuration of the navigate engine
 navigate-engine {
     # host for the odb
