--- a/deploy/src/main/resources/conf/app.conf
+++ b/deploy/src/main/resources/conf/app.conf
@@ -33,8 +33,10 @@ lucuma-sso {
 navigate-engine {
     # host for the odb
     odb = "wss://lucuma-postgres-odb-production.herokuapp.com/ws"
+    odb = ${?ODB_URL}
     # host for observe
     observe = "https://observe.hi.gemini.edu"
+    observe = ${?OBSERVE_URL}
     # Tells Navigate how to interact with a system:
     #   full: connect and command the system
     #   readOnly: connect, but only to read values
