--- a/modules/web/server/src/main/resources/app.conf
+++ b/modules/web/server/src/main/resources/app.conf
@@ -34,8 +34,10 @@ lucuma-sso {
 navigate-engine {
     # host for the odb
     odb = "https://lucuma-postgres-odb-dev.herokuapp.com/odb"
+    odb = ${?ODB_URL}
     # host for observe
     observe = "https://localhost:7070"
+    observe = ${?OBSERVE_URL}
     # Tells Navigate how to interact with a system:
     #   full: connect and command the system
     #   readOnly: connect, but only to read values
