--- a/deploy/conf/staging-gn/site.conf
+++ b/deploy/conf/staging-gn/site.conf
@@ -46,5 +46,5 @@ navigate-engine {
         observe = full
     }
     tops = "tcs=tcs:, ao=ao:, gm=gm:, gc=gc:, gw=ws:, m2=m2:, oiwfs=oiwfs:, ag=ag:, f2=f2:, gsaoi=gsaoi:, aom=aom:, myst=myst:, rtc=rtc:"
-    epics-ca-addr-list= "10.2.2.100 10.2.2.101 10.2.2.102 10.2.2.103 10.2.2.104 10.2.2.105 10.2.2.106 10.2.2.107 10.2.2.108 10.2.2.109 10.2.2.110 10.2.2.111 10.2.2.112 10.2.2.113"
+    epics-ca-addr-list= "10.2.2.36 10.2.2.43 10.2.2.100 10.2.2.101 10.2.2.102 10.2.2.103 10.2.2.104 10.2.2.105 10.2.2.106 10.2.2.107 10.2.2.108 10.2.2.109 10.2.2.110 10.2.2.111 10.2.2.112 10.2.2.113"
 }
