--- a/deploy/conf/staging-gs/site.conf
+++ b/deploy/conf/staging-gs/site.conf
@@ -15,6 +15,10 @@ web-server {
     external-base-url = "navigate.cl.gemini.edu"
     # Uri to forward requests made to /proxy to.
     proxy-base-uri = "http://localhost:4000"
+    # Interface to listen on, 0.0.0.0 listens in all interfaces, production instances should be more restrictive
+    host = "0.0.0.0"
+    # Port to serve https requests
+    port = 9090
     # Certificate
     tls {
         key-store = "conf/local/site.jks"
