--- a/modules/web/server/src/main/resources/base.conf
+++ b/modules/web/server/src/main/resources/base.conf
@@ -11,7 +11,8 @@ web-server {
     # Interface to listen on, 0.0.0.0 listens in all interfaces, production instances should be more restrictive
     host = "0.0.0.0"
     # Port to serve https requests
-    port = 9070
+    # 9090 is the only allowed port by IT other than typical 80 and 443
+    port = 9090
     # Port for redirects to https
     insecure-port = 9071
     # External url used for redirects
