Revert "Temp always publish"
This reverts commit 280ea9985b2a360378b8d193e444d7bbcb8e5395.

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -5,10 +5,10 @@ name: Publish npm package
 
 on:
   push:
-    # branches:
-    #   - 'main'
-    # paths:
-    #   - '**.graphql'
+    branches:
+      - 'main'
+    paths:
+      - '**.graphql'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
