--- a/deploy/conf/production-gs/site.conf
+++ b/deploy/conf/production-gs/site.conf
@@ -16,7 +16,7 @@ web-server {
     proxy-base-uri = "http://localhost:4000"
     # Certificate
     tls {
-        key-store = "conf/local/site.jks"
+        key-store = "conf/local/cpogppnav-lv1.cl.gemini.edu.jks"
         key-store-pwd = "<Define in secrets.conf>"
         cert-pwd = "<Define in secrets.conf>"
     }
