--- a/deploy/conf/staging-gs/site.conf
+++ b/deploy/conf/staging-gs/site.conf
@@ -12,12 +12,12 @@ site = GS
 # Web server related configuration
 web-server {
     # External url used for redirects
-    external-base-url = "navigate.cl.gemini.edu"
+    external-base-url = "navigate-test.cl.gemini.edu"
     # Uri to forward requests made to /proxy to.
     proxy-base-uri = "http://localhost:4000"
     # Certificate
     tls {
-        key-store = "conf/local/site.jks"
+        key-store = "conf/local/cpogppnavdev-lv1.cl.gemini.edu.jks"
         key-store-pwd = "<Define in secrets.conf>"
         cert-pwd = "<Define in secrets.conf>"
     }
