fine-tune configurations

--- a/deploy/conf/production-gs/site.conf
+++ b/deploy/conf/production-gs/site.conf
@@ -32,7 +32,7 @@ lucuma-sso {
 # Configuration of the navigate engine
 navigate-engine {
     # host for the odb
-    odb = "https://lucuma-postgres-odb-production.herokuapp.com/odb"
+    odb = "https://lucuma-postgres-odb-production.herokuapp.com/odb" # Production ODB server
     # host for observe
     observe = "https://observe.cl.gemini.edu"
     # system-control {
