fix site configurations

--- a/deploy/conf/production-gn/site.conf
+++ b/deploy/conf/production-gn/site.conf
@@ -36,14 +36,8 @@ navigate-engine {
     # host for observe
     observe = "https://observe.hi.gemini.edu"
     # system-control {
-    #     altair = simulated
-    #     gems = simulated
-    #     gcal = full
-    #     gpi = simulated
-    #     gsaoi = simulated
-    #     tcs = full
-    #     observe = full
+    #   Configure in local systems.conf
     # }
-    # tops = "tcs=tcs:, ao=ao:, gm=gm:, gc=gc:, gw=ws:, m2=m2:, oiwfs=oiwfs:, ag=ag:, f2=f2:, gsaoi=gsaoi:, aom=aom:, myst=myst:, rtc=rtc:"
-    # epics-ca-addr-list= "10.2.2.100 10.2.2.101 10.2.2.102 10.2.2.103 10.2.2.104 10.2.2.105 10.2.2.106 10.2.2.107 10.2.2.108 10.2.2.109 10.2.2.110 10.2.2.111 10.2.2.112 10.2.2.113"
+    tops = "tcs=tcs:, ao=ao:, gm=gm:, gc=gc:, gw=ws:, m2=m2:, oiwfs=oiwfs:, ag=ag:, f2=f2:, gsaoi=gsaoi:, aom=aom:, myst=myst:, rtc=rtc:"
+    epics-ca-addr-list= "10.2.2.100 10.2.2.101 10.2.2.102 10.2.2.103 10.2.2.104 10.2.2.105 10.2.2.106 10.2.2.107 10.2.2.108 10.2.2.109 10.2.2.110 10.2.2.111 10.2.2.112 10.2.2.113"
 }
