--- a/deploy/conf/staging-gs/site.conf
+++ b/deploy/conf/staging-gs/site.conf
@@ -36,15 +36,9 @@ navigate-engine {
     odb = "https://lucuma-postgres-odb-staging.herokuapp.com/odb" # Staging ODB server
     # host for observe
     observe = "https://observe-test.cl.gemini.edu"
-    system-control {
-        altair = simulated
-        gems = simulated
-        gcal = simulated
-        gpi = simulated
-        gsaoi = simulated
-        tcs = full
-        observe = full
-    }
+    # system-control {
+    #   Configure in local systems.conf
+    # }
     tops = "tcs=tcs:, ao=ao:, gm=gm:, gc=gc:, gw=ws:, m2=m2:, oiwfs=oiwfs:, ag=ag:, f2=f2:, gsaoi=gsaoi:, aom=aom:, myst=myst:, rtc=rtc:"
     epics-ca-addr-list = "172.17.2.255 172.17.3.255 172.17.102.130 172.17.105.20 172.16.102.130 aom-vme sbfmcao01.cl.gemini.edu mcao-stealth.cl.gemini.edu 172.17.106.111 172.17.105.37 172.17.107.50 172.17.55.101 172.17.101.101 172.17.65.255 172.17.102.139 172.17.102.138"
 }
