Allow configuring web-server variables with env vars

--- a/modules/web/server/src/main/resources/base.conf
+++ b/modules/web/server/src/main/resources/base.conf
@@ -5,6 +5,7 @@
 # mode can be dev in which case fake authentication is supported and the UI provides some extra tools
 mode = dev
 site = GS
+site = ${?NAVIGATE_SITE}
 
 # Web server related configuration
 web-server {
@@ -13,12 +14,15 @@ web-server {
     # Port to serve https requests
     # 9090 is the only allowed port by IT other than typical 80 and 443
     port = 9090
+    port = ${?PORT}
     # Port for redirects to https
     insecure-port = 9071
     # External url used for redirects
     external-base-url = "localhost"
+    external-base-url = ${?EXTERNAL_BASE_URL}
     # Uri to forward requests made to /proxy to.
     proxy-base-uri = "https://localhost:8080"
+    proxy-base-uri = ${?PROXY_BASE_URI}
 }
 
 # Single sign-on configuration
